WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244577
[WTF] clang warning in ThreadCondition::timedWait()
https://bugs.webkit.org/show_bug.cgi?id=244577
Summary
[WTF] clang warning in ThreadCondition::timedWait()
Philippe Normand
Reported
2022-08-31 02:18:10 PDT
/app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:612:49: warning: implicit conversion from 'long' to 'double' changes value from 9223372036854775807 to 9223372036854775808 [-Wimplicit-const-int-float-conversion] if (absoluteTime > WallTime::fromRawSeconds(std::numeric_limits<time_t>::max())) { ~~~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-08-31 02:20:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3845
EWS
Comment 2
2022-08-31 07:09:47 PDT
Committed
253981@main
(540e189f3d4e): <
https://commits.webkit.org/253981@main
> Reviewed commits have been landed. Closing PR #3845 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-31 07:10:19 PDT
<
rdar://problem/99381554
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug