[WTF] clang warning in ThreadCondition::timedWait() https://bugs.webkit.org/show_bug.cgi?id=244577

Reviewed by Adrian Perez de Castro.

* Source/WTF/wtf/posix/ThreadingPOSIX.cpp:
(WTF::ThreadCondition::timedWait): WallTime::fromRawSeconds() expects a double value.

Canonical link: https://commits.webkit.org/253981@main